--- a/crates/semifold/locales/zh.toml
+++ b/crates/semifold/locales/zh.toml
@@ -78,3 +78,12 @@ pre_check = "包 %{package} %{version} 的预检查通过，跳过发布"
 [cli.publish.flags]
 github_release = "为发布的包创建 GitHub Release，仅在 CI 环境中可用"
 allow_dirty = "允许发布包含不干净的 Git 工作树的包"
+
+[cli.ci]
+not_ci_environment = "未在 CI 环境中运行"
+git_repo_not_initialized = "Git 仓库未初始化"
+github_repo_invalid_format = "GITHUB_REPOSITORY 格式不正确，应为 owner/repo"
+not_base_branch = "不是推送到基础分支，跳过版本提升和发布。"
+no_changesets_publish = "未找到变更集，将发布当前版本。"
+no_existing_pr = "未找到现有 PR，创建新的 PR。"
+existing_pr_found = "找到现有 PR #%{number}，跳过创建新 PR。"
